styles/set box sizing to fix horizontal scrolling on small screens

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,16 @@
 @charset "utf-8";
+
+html {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+}
+*, *:before, *:after {
+  -webkit-box-sizing: inherit;
+  -moz-box-sizing: inherit;
+  box-sizing: inherit;
+  }
+
 /* CSS Document */
 
 body,
@@ -138,6 +150,7 @@ nav h1 a {
   .filter-options {
     display: grid;
     grid-template-columns: 0fr;
+
   }
 }
 
@@ -175,6 +188,12 @@ nav h1 a {
 
 /* Extra small devices (phones, 600px and down) */
 @media only screen and (max-width: 600px) {
+  /* .heart {
+    margin: 10px 0 10px !important;
+  }
+  #restaurant-name {
+    display: none !important;
+  } */
   .restaurants-list-container {
     grid-template-columns: 1fr;
   }
@@ -283,11 +302,11 @@ nav h1 a {
 }
 
 /* Extra small devices (phones, 600px and down) */
-@media only screen and (max-width: 684px) {
+/* @media only screen and (max-width: 684px) {
   #reviews-list li {
     width: 76% !important;
   }
-}
+} */
 
 @media only screen and (max-width: 590px) {
   .inside #map-container {
@@ -320,13 +339,7 @@ nav h1 a {
   padding: 2px 0;
 }
 #restaurant-name {
-  color: #f18200;
-  font-family: Arial, sans-serif;
-  font-size: 20pt;
-  font-weight: 200;
-  letter-spacing: 0;
-  margin: 40px 0 30px;
-  text-transform: uppercase;
+display: none;
 }
 #restaurant-img {
   width: 90%;
@@ -378,7 +391,7 @@ nav h1 a {
   overflow: hidden;
   padding: 0 20px 20px;
   position: relative;
-  width: 80%;
+  /* width: 80%; */
 }
 #reviews-list li p {
   margin: 0 0 10px;
@@ -397,10 +410,189 @@ nav h1 a {
   cursor: pointer;
   transition: background-position 1s steps(28);
   transition-duration: 0s;
-  margin-top: -82px;
+  margin: 35px 0 0 !important;
 }
 
 .is-active {
   transition-duration: 1s;
   background-position: -2800px 0;
+}
+
+select {
+  margin: 50px;
+  width: 150px;
+  padding: 5px 35px 5px 5px;
+  font-size: 16px;
+  border: 1px solid #ccc;
+  height: 34px;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  background: url(../fav.ico) 96% / 15% no-repeat #eee;
+}
+
+/* CAUTION: IE hackery ahead */
+select::-ms-expand {
+    display: none; /* remove default arrow on ie10 and ie11 */
+}
+
+/* target Internet Explorer 9 to undo the custom arrow */
+@media screen and (min-width:0\0) {
+    select {
+        background:none\9;
+        padding: 5px\9;
+    }
+}
+
+/* Form */
+form {
+  max-width: 900px;
+  padding: 0 20px 20px 20px;
+}
+/*
+input,
+label {
+  display: block;
+  width: 100%;
+}
+
+label {
+  font-weight: bold;
+  margin-bottom: 5px;
+} */
+
+input,
+/* input:not(input[type='radio']), */
+/* input:not(type='radio'), */
+select, .rating, textarea, button {
+  background: #f9f9f9;
+  border: 1px solid #e5e5e5;
+  border-radius: 8px;
+  box-shadow: inset 0 1px 1px #e1e1e1;
+  font-size: 16px;
+  padding: 8px;
+}
+input[type="radio"] {
+  box-shadow: none;
+}
+button {
+  min-width: 48px;
+  min-height: 48px;
+}
+button:hover {
+  border: 1px solid #ccc;
+  background-color: #fff;
+}
+button#review-add-btn,
+button.close-btn,
+button#submitButton {
+  min-height: 40px;
+}
+button#submitButton {
+  font-weight: bold;
+  cursor: pointer;
+  padding: 0 16px;
+}
+
+.fieldset {
+  margin-top: 20px;
+}
+.right {
+  align-self: flex-end;
+}
+#reviewForm-container {
+  width: 100%;
+  /* background-color: #eee; */
+  padding: 0 20px 26px;
+  color: #333;
+  overflow-y: auto;
+}
+#reviewForm-container h2 {
+  margin: 0 0 0 6px;
+}
+#reviewForm {
+  display: flex;
+  flex-direction: column;
+  background: #fff;
+  border: 1px solid #e5e5e5;
+  border-radius: 4px;
+}
+#reviewForm label, #reviewForm input {
+  display: block;
+  /* width: 100%; */
+}
+#reviewForm label {
+  font-weight: bold;
+  margin-bottom: 5px;
+}
+
+#reviewForm .rating label, #reviewForm .rating input,
+#reviewForm .rate1 label, #reviewForm .rate1 input {
+  display: inline-block;
+}
+/* Modified from: https://codepen.io/tammykimkim/pen/yegZRw */
+.rating {
+  /* float: left; */
+  /* display: inline-block; */
+  height: 36px;
+  display: inline-flex;
+  flex-direction: row-reverse;
+  align-items: flex-start;
+  justify-content: flex-end;
+}
+#reviewForm .rating > label {
+  margin-bottom: 0;
+  margin-top: -5px;
+  height: 30px;
+}
+.rating:not(:checked) > input {
+  /* position: absolute; */
+  top: -9999px;
+  margin-left: -24px;
+  width: 20px;
+  padding-right: 14px;
+  z-index: -10;
+}
+.rating:not(:checked) > label {
+  float:right;
+  width:1em;
+  overflow:hidden;
+  white-space:nowrap;
+  cursor:pointer;
+  font-size:30px;
+  color:#ccc;
+}
+/* #star1:focus{
+
+} */
+.rate2 {
+  float: none;
+}
+.rating:not(:checked) > label::before {
+  content: '★ ';
+  position: relative;
+  top: -10px;
+  left: 2px;
+}
+.rating > input:checked ~ label {
+  color: #ffc700;
+  /* outline: -webkit-focus-ring-color auto 5px; */
+}
+.rating > input:checked:focus + label, .rating > input:focus + label {
+  outline: -webkit-focus-ring-color auto 5px;
+}
+.rating:not(:checked) > label:hover,
+.rating:not(:checked) > label:hover ~ label {
+  color: #deb217;
+  /* outline: -webkit-focus-ring-color auto 5px; */
+}
+.rating > input:checked + label:hover,
+.rating > input:checked + label:hover ~ label,
+.rating > input:checked ~ label:hover,
+.rating > input:checked ~ label:hover ~ label,
+.rating > label:hover ~ input:checked ~ label {
+  color: #c59b08;
+}
+#submit-review {
+  align-self: flex-end;
 }
